# Oxrena

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  shell.nix  xmake.lua
.github/workflows/: cmake.yml
OxArena/: CMakeLists.txt
OxArena/Assets/Scenes/: Main.oxscene
OxArena/Assets/Textures/: PrototypeMaterial.oxmat
OxArena/src/: App.cpp  RuntimeLayer.cpp  RuntimeLayer.h
OxArena/src/Systems/: CharacterSystem.cpp  CharacterSystem.h  FreeCamera.cpp  FreeCamera.h  PickupSystem.cpp  PickupSystem.h  WeaponSystem.cpp  WeaponSystem.h
OxArena/src/UI/: UI.cpp  UI.h
Oxrena/: Oxrena.oxproj  xmake.lua
Oxrena/src/: App.cpp  Game.cpp  Game.hpp  OxrenaLayer.cpp  OxrenaLayer.h
Oxrena/src/Systems/: CharacterSystem.cpp  CharacterSystem.h  FreeCamera.cpp  FreeCamera.h  PickupSystem.cpp  PickupSystem.h  WeaponSystem.cpp  WeaponSystem.h
Oxrena/src/UI/: UI.cpp  UI.h
